kubernetes/monitoring/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: monitoring-ingress
  namespace: monitoring

spec:
  ingressClassName: traefik

  rules:

  - host: node1

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80

  - host: node1

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port:
              number: 9090
